tests/compile-fail/function_pointers/cast_fn_ptr5.stderr
error: Undefined Behavior: calling a function with return type u32 passing return place of type ()
 --> $DIR/cast_fn_ptr5.rs:8:5
  |
8 |     g() //~ ERROR calling a function with return type u32 passing return place of type ()
  |     ^^^ calling a function with return type u32 passing return place of type ()
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/cast_fn_ptr5.rs:8:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

